--- a/src/Chart/Chart.module.css
+++ b/src/Chart/Chart.module.css
@@ -49,8 +49,8 @@ a:active {
   max-width: 80%;
 }
 .userTable {
-  border: 1px solid rgb(255, 255, 255);
-  border-radius: 10px;
+  border: 0px solid rgb(255, 255, 255);
+  /* border-radius: 10px; */
   margin: auto;
   border-collapse: collapse;
   min-width: 100%;
@@ -58,41 +58,36 @@ a:active {
   line-height: 0.5rem;
   align-items: center;
   padding: 0;
+  color: antiquewhite;
 }
 
 .userTable thead {
   background-color: rgba(54, 162, 235, 0.5);
   color: #ccc;
-  border-radius: 10px;
+  /* border-radius: 10px; */
   border-collapse: collapse;
   height: 1.5rem;
 }
 .userTable td,
 .userTable th {
-  border: 1px solid rgba(243, 242, 242, 0.2);
+  border: 0px solid rgba(243, 242, 242, 0.2);
+  color: antiquewhite;
   text-align: center;
-  border-radius: 4px;
+  /* border-radius: 4px; */
   border-collapse: collapse;
   height: 1.4rem;
-  /* min-width: 10%;
-  max-width: fit-content; */
   word-wrap: break-word;
   text-decoration: none;
 }
 
 .userTable tr {
+  color: antiquewhite;
   padding: 0;
 }
 
 .userTable tr:nth-child(even) {
-  background-color: rgba(54, 162, 235, 0.1);
-}
-
-.userTable tr:hover {
-  background-color: rgba(54, 162, 235, 0.5);
-  color: #ccc;
-
-  cursor: pointer;
+  background-color: rgba(109, 193, 248, 0.3);
+  color: antiquewhite;
 }
 
 .toptable {
@@ -108,6 +103,8 @@ a:active {
 .toptable_childL {
   flex: 1 1 max-content;
   justify-content: left;
+  margin: -4rem 0 0 0;
+  margin-left: 1rem;
 }
 .toptable_childM {
   flex: 1 1 max-content;
@@ -129,6 +126,7 @@ a:active {
 .infotable {
   font-size: small;
   font-weight: 700;
+  color: red;
 }
 
 /* Responsive layout - makes a one column layout (100%) instead of a two-column layout (50%) */
