--- a/src/Components/UI/Card.module.css
+++ b/src/Components/UI/Card.module.css
@@ -1,5 +1,10 @@
 .card {
-  background: white;
+  border: 1px solid rgba(54, 162, 235, 1);
+  background: rgba(54, 162, 235, 0.2);
+  color: rgb(50, 4, 255);
+  padding: 0.25rem 1rem;
+  cursor: pointer;
+  border-radius: 5px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   border-radius: 10px;
   padding: 1rem;
@@ -7,4 +12,71 @@
   max-width: 90%;
   margin-bottom: 1rem;
   /* padding-bottom: 30rem!important; */
+}
+
+.topchart {
+  background-color: rgb(0, 0, 5);
+  background-image: url("../../Images/wwwvecteezycom.jpg");
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover;
+  opacity: 0.85;
+}
+
+.topchartdetail {
+  background-color: rgb(37, 54, 106);
+  /* background-image: url('../../Images/wwwvecteezycom.jpg'); */
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover;
+  opacity: 0.95;
+  color: white;
+}
+
+.has_text_left {
+  color: white;
+}
+
+.ReadMorebtc {
+  color: rgb(22, 160, 252);
+}
+
+.HeroPlace {
+  display: grid;
+  /* grid-template-columns: 60% 40%; */
+  grid-auto-flow: col;
+  gap: 1rem;
+  height: 20rem;
+  max-height: 20rem;
+  min-height: 20rem;
+}
+
+.chartdisplay {
+  overflow: hidden;
+  display: none;
+}
+
+.infodisplay {
+  overflow: hidden;
+}
+@media (min-width: 50rem) {
+  .HeroPlace {
+    grid-auto-flow: column;
+  }
+  .chartdisplay {
+    overflow: visible;
+    display: block;
+  }
+
+  .infodisplay {
+    overflow: auto;
+  }
+}
+
+.App {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
 }
