--- a/src/Components/User/UsersList.module.css
+++ b/src/Components/User/UsersList.module.css
@@ -25,7 +25,7 @@
   margin-bottom: 1rem;
   font-size: small;
   max-width: 80%;
-  color: rgba(54, 162, 235, 0.5);;
+  color: rgba(54, 162, 235, 1);
 }
 .userTable {
   border: 1px solid rgb(255, 255, 255);
@@ -125,6 +125,17 @@
   margin: 0 0rem 0.7rem 0rem;
   color: #0a58ca;
   border-radius: 5px;
+  /* border: 1px solid rgba(54, 162, 235, 1); */
+}
+
+.dropdownsmall {
+  width: 7rem;
+  height: 2rem;
+  margin: 0 0 0.7rem 0;
+  color: #000000;
+  border-radius: 5px;
+  padding: 0;
+  background-color: rgb(102, 192, 252);
   /* border: 1px solid rgba(54, 162, 235, 1); */
 }
 
