--- a/src/Components/User/UsersList.module.css
+++ b/src/Components/User/UsersList.module.css
@@ -27,6 +27,16 @@
   max-width: 80%;
   color: rgba(54, 162, 235, 1);
 }
+.toptablestatus {
+  text-align: center;
+  align-items: center;
+  margin: auto;
+  margin-bottom: 1rem;
+  font-size: small;
+  max-width: 80%;
+  color: rgba(54, 162, 235, 1);
+  width: 100%;
+}
 .userTable {
   border: 1px solid rgb(255, 255, 255);
   border-radius: 10px;
@@ -95,6 +105,7 @@
   height: 38px;
 }
 
+
 .toptable {
   margin: auto;
   display: flex;
@@ -129,7 +140,7 @@
 }
 
 .dropdownsmall {
-  width: 7rem;
+  width: 100%;
   height: 2rem;
   margin: 0 0 0.7rem 0;
   color: #000000;
