--- a/src/Components/User/UsersList.module.css
+++ b/src/Components/User/UsersList.module.css
@@ -35,7 +35,10 @@
   font-size: small;
   max-width: 80%;
   color: rgba(54, 162, 235, 1);
-  width: 100%;
+  width: 70rem;
+ 
+  max-width: 100%;
+  min-width: 100%;
 }
 .userTable {
   border: 1px solid rgb(255, 255, 255);
@@ -105,7 +108,6 @@
   height: 38px;
 }
 
-
 .toptable {
   margin: auto;
   display: flex;
@@ -147,6 +149,7 @@
   border-radius: 5px;
   padding: 0;
   background-color: rgb(102, 192, 252);
+  
   /* border: 1px solid rgba(54, 162, 235, 1); */
 }
 
@@ -193,4 +196,59 @@
     font-weight: bold;
     text-align: left;
   }
+}
+
+[list] {
+  background-color: #fff;
+  border: 1px solid #000;
+  padding: 8px;
+}
+
+datalist,
+#input--type-list__datalist {
+  background-color: #0f0;
+  box-shadow: none;
+  width: 100%;
+  display: none;
+}
+
+.errorMessage {
+  /* border: 2px solid rgba(54, 162, 235, 1); */
+  /* box-shadow: 2px 2px 4px rgba(54, 162, 235, 1); */
+  /* background-color: rgba(54, 162, 235, 0.8); */
+  padding: 3rem 1rem 3rem 1rem;
+  text-align: center;
+  border-radius: 4px;
+  height: 50px;
+  color: rgb(255, 255, 255);
+  /* text-shadow: 2px 2px 3px rgba(54, 162, 235, 1); */
+  word-wrap: break-word;
+  display: flex;
+  vertical-align: middle;
+  justify-items: center;
+  align-items: center;
+}
+
+.fearimg {
+  height: 18rem;
+  filter: hue-rotate(180deg);
+  border-radius: 1rem;
+}
+
+/*Filter styles*/
+/* .saturate { filter: saturate(3); }
+.grayscale { filter: grayscale(100%); }
+.contrast { filter: contrast(160%); }
+.brightness { filter: brightness(0.25); }
+.blur { filter: blur(3px); }
+.invert { filter: invert(100%); }
+.sepia { filter: sepia(100%); }
+.huerotate { filter: hue-rotate(180deg); }
+.rss.opacity { filter: opacity(50%); } */
+
+iframe {
+  border-radius: 10px !important;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 0px 2px 0px,
+    rgba(0, 0, 0, 0.24) 0px 2px 2px 0px;
+    
 }
