--- a/src/Components/UI/Card.module.css
+++ b/src/Components/UI/Card.module.css
@@ -14,6 +14,20 @@
   /* padding-bottom: 30rem!important; */
 }
 
+.clipboardinside {
+  height: 18rem;
+  min-height: 18rem;
+  max-height: 18rem;
+}
+.inputinside  {
+  color: white!important;
+  height: 1vh;
+  min-height: 16rem;
+
+  overflow-y: scroll;
+  
+}
+
 .topchart {
   background-color: rgb(0, 0, 5);
   background-image: url("../../Images/wwwvecteezycom.jpg");
@@ -42,7 +56,6 @@
 }
 
 .HeroPlace {
-
   display: -ms-grid;
   display: grid;
   /* grid-template-columns: 60% 40%; */
