--- a/src/about.module.css
+++ b/src/about.module.css
@@ -5,7 +5,7 @@
   font-size: large;
 
   border: 1px solid rgba(54, 162, 235, 1);
-  background: rgba(54, 162, 235, 0.2);
+  background: rgba(54, 162, 235, 0.4);
   color: rgb(50, 4, 255);
   padding: 0.25rem 1rem;
   /* cursor: pointer; */
@@ -25,4 +25,55 @@ li {
 
 a {
   color: rgb(50, 4, 255);
+}
+
+.textareatweet {
+  width: 100%;
+  height: 300px;
+}
+
+.litweet {
+  list-style-type: decimal;
+}
+.bkgimage {
+  width: 100%;
+  border-radius: 1rem;
+  border: 5sold black;
+}
+.twitterdiv {
+  position: relative;
+}
+.languagebtn {
+  border: 5px sold black;
+  margin: 1rem 0 1rem 0;
+  width: 100%;
+  font: inherit;
+  font-weight: 500;
+  border: 1px solid rgba(54, 162, 235, 1);
+  background: rgba(54, 162, 235, 0.2);
+  color: rgb(50, 4, 255);
+  padding: 0.25rem 1rem;
+  cursor: pointer;
+  border-radius: 1.5rem;
+  transition: color 250ms ease-in, background 250ms ease-in;
+  min-width: 3rem;
+  
+}
+
+.languagebtn:hover,
+.languagebtn:active {
+  background: rgba(54, 162, 235, 0.5);
+  color: black;
+}
+
+.languagebtn:focus {
+  outline: none;
+}
+
+@media only screen and (max-width: 965px) {
+  .languagebtn {
+    right: 0;
+    overflow: visible;
+    width: 100%;
+  }
 }
