--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,10 +1,19 @@
-
-
 .myNavbar {
   top: 0;
- position: -webkit-sticky;
-  position: sticky;
-  margin-bottom: 1rem;
   margin-top: 0;
-  z-index: 999!important;
+  z-index: 999 !important;
+}
+.mainfram {
+  width: 100%;
+  padding-top: 4rem;
+  /* position: fixed; */
+}
+
+@media (max-width: 50rem) {
+  .mainfram {
+    width: 100%;
+  }
+  .myNavbar {
+    display: none;
+  }
 }
