--- a/src/Chart/Chart.module.css
+++ b/src/Chart/Chart.module.css
@@ -103,9 +103,9 @@ a:active {
 .toptable_childL {
   flex: 1 1 max-content;
   justify-content: left;
-  margin: -4rem 0 0 0;
-  margin-left: 1rem;
+  margin: -4rem 0 0 1rem;
 }
+
 .toptable_childM {
   flex: 1 1 max-content;
   justify-content: center;
@@ -166,5 +166,11 @@ a:active {
     font-size: 15px;
     font-weight: bold;
     text-align: left;
+  }
+
+  .toptable_childL {
+    flex: 1 1 max-content;
+    /* justify-content: center; */
+    margin-left: 50%;
   }
 }
