--- a/src/Components/User/AddUser.module.css
+++ b/src/Components/User/AddUser.module.css
@@ -61,7 +61,7 @@
 }
 
 /* Responsive layout - makes a one column layout (100%) instead of a two-column layout (50%) */
-@media only screen and (max-width: 965px) {
+@media only screen and (max-width: 50rem) {
   .flex_item_right {
     flex: 100%;
   }
