--- a/src/about.module.css
+++ b/src/about.module.css
@@ -1,22 +1,16 @@
 .container {
-  margin: auto;
-  padding: 10rem;
   font-weight: 600;
   font-size: large;
-
   border: 1px solid rgba(54, 162, 235, 1);
   background: rgba(54, 162, 235, 0.4);
   color: rgb(50, 4, 255);
-  padding: 0.25rem 1rem;
-  /* cursor: pointer; */
-  border-radius: 5px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   border-radius: 10px;
   padding: 1rem;
   margin: auto;
   max-width: 90%;
   margin-bottom: 1rem;
-  /* padding-bottom: 30rem!important; */
+  overflow: scroll;
 }
 
 .ulabout {
@@ -43,18 +37,27 @@ a {
 .twitterdiv {
   position: relative;
 }
+.flextbtn {
+  display: flex;
+  margin: auto;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  width: 80%;
+}
+
 .languagebtn {
-  border: 5px sold black;
   margin: 1rem 0 1rem 0;
   width: 100%;
   font: inherit;
+  font-size: 0.88rem;
   font-weight: 500;
   border: 1px solid rgba(54, 162, 235, 1);
+  border-radius: 0.5rem;
   background: rgba(54, 162, 235, 0.2);
-  color: rgb(50, 4, 255);
+  color: rgb(32,49,100);
   padding: 0.25rem 1rem;
   cursor: pointer;
-  border-radius: 1.5rem;
   transition: color 250ms ease-in, background 250ms ease-in;
   min-width: 3rem;
 }
@@ -91,7 +94,6 @@ a {
   transition: color 250ms ease-in, background 250ms ease-in;
   min-width: 8rem;
   align-items: right;
-  
 }
 
 .cta:hover,
