--- a/src/Components/UI/Card.module.css
+++ b/src/Components/UI/Card.module.css
@@ -19,13 +19,27 @@
   min-height: 18rem;
   max-height: 18rem;
 }
-.inputinside  {
-  color: white!important;
-  height: 20rem;
-  min-height: 16rem;
-
+.clipboardinsidetext {
+  color: white !important;
+  height: 10rem;
+  min-height: 10rem;
   overflow-y: scroll;
-  
+  font-weight: 600;
+  font-size: 0.8rem;
+  border: 1px solid rgba(54, 162, 235, 1);
+  background: rgba(54, 162, 235, 0.4);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  border-radius: 10px;
+  padding: 1rem;
+  margin: auto;
+  max-width: 98%;
+  margin-bottom: 1rem;
+}
+.inputinside {
+  color: white !important;
+  height: 30rem;
+  min-height: 16rem;
+  overflow-y: scroll;
 }
 
 .topchart {
@@ -75,7 +89,6 @@
   overflow: hidden;
 }
 @media (min-width: 50rem) {
-
   .HeroPlace {
     grid-auto-flow: column;
   }
@@ -95,4 +108,29 @@
   left: 50%;
   /* bring your own prefixes */
   transform: translate(-50%, -50%);
+}
+
+@media screen and (max-width: 50rem) {
+  .clipboardinside {
+    height: 10rem;
+    min-height: 10rem;
+    max-height: 10rem;
+  }
+  .clipboardinsidetext {
+    color: #fcfdff !important;
+    height: 8rem;
+    min-height: 8rem;
+    overflow-y: scroll;
+    font-weight: 600;
+    font-size: 0.88rem;
+    border: 1px solid rgba(54, 162, 235, 1);
+    background: rgba(54, 162, 235, 0.7);
+    box-shadow: 0 2px 8px rgb(0 0 0 / 26%);
+    border-radius: 10px;
+    padding: 0.5rem;
+    margin: auto;
+    max-width: 100%;
+    line-height: 1.2;
+   
+  }
 }
