troubleshoot last bugs till adding counter to twitter

--- a/src/Components/UI/Card.module.css
+++ b/src/Components/UI/Card.module.css
@@ -2,7 +2,7 @@
   border: 1px solid rgba(54, 162, 235, 1);
   background: rgba(54, 162, 235, 0.2);
   color: rgb(50, 4, 255);
-  padding: 0.25rem 1rem;
+ 
   /* cursor: pointer; */
   border-radius: 5px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
@@ -20,20 +20,33 @@
   max-height: 18rem;
 }
 .clipboardinsidetext {
-  color: white !important;
-  height: 10rem;
+  color: rgb(37, 54, 106) !important;
+  height: 16rem;
   min-height: 10rem;
   overflow-y: scroll;
   font-weight: 600;
   font-size: 0.8rem;
   border: 1px solid rgba(54, 162, 235, 1);
-  background: rgba(54, 162, 235, 0.4);
+  background: rgba(54, 162, 235, 1);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   border-radius: 10px;
   padding: 1rem;
   margin: auto;
+  padding: 0 0.5rem 0.5rem 0.5rem;
   max-width: 98%;
   margin-bottom: 1rem;
+}
+.insidetitle {
+  color: white;
+  font-size: 0.8rem;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
+  text-align: center;
+  background: rgba(54, 162, 235, 1);
+  padding: 0.3rem 0 0 0;
+}
+.insidecontent {
 }
 .inputinside {
   color: white !important;
@@ -53,7 +66,6 @@
 
 .topchartdetail {
   background-color: rgb(37, 54, 106);
-  /* background-image: url('../../Images/wwwvecteezycom.jpg'); */
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover;
@@ -72,29 +84,35 @@
 .HeroPlace {
   display: -ms-grid;
   display: grid;
-  /* grid-template-columns: 60% 40%; */
-  grid-auto-flow: col;
+  grid-auto-flow: row;
   gap: 1rem;
+  align-content: center;
   height: 20rem;
   max-height: 20rem;
   min-height: 20rem;
+
 }
 
 .chartdisplay {
   overflow: hidden;
-  display: none;
+  display: block;
+  z-index: 999;
 }
 
 .infodisplay {
-  overflow: hidden;
+  overflow: scroll;
 }
 @media (min-width: 50rem) {
+
   .HeroPlace {
     grid-auto-flow: column;
+    align-content: center;
+    gap: 1rem;
   }
   .chartdisplay {
     overflow: visible;
     display: block;
+    z-index: 999;
   }
 
   .infodisplay {
@@ -117,20 +135,19 @@
     max-height: 10rem;
   }
   .clipboardinsidetext {
-    color: #fcfdff !important;
+    color: rgb(37, 54, 106) !important;
     height: 8rem;
     min-height: 8rem;
     overflow-y: scroll;
     font-weight: 600;
     font-size: 0.88rem;
     border: 1px solid rgba(54, 162, 235, 1);
-    background: rgba(54, 162, 235, 0.7);
+    background: rgba(54, 162, 235, 1);
     box-shadow: 0 2px 8px rgb(0 0 0 / 26%);
     border-radius: 10px;
-    padding: 0.5rem;
+    padding: 0 0.5rem 0.5rem 0.5rem;
     margin: auto;
     max-width: 100%;
     line-height: 1.2;
-   
   }
 }
