--- a/src/Components/User/infoCard.module.css
+++ b/src/Components/User/infoCard.module.css
@@ -1,15 +1,14 @@
 .container {
-  display: -ms-grid;
-  display: grid;
-  grid-auto-flow: row;
-  grid-gap: 20px;
-  overflow: hidden;
-
-  /* grid-template-rows: repeat(3,1rem);
-  grid-template-columns: repeat(3,1rem); */
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
 }
+
 .tableContainer {
   color: antiquewhite;
+  flex: 1 1 24%;
+  min-width: 20ch;
+  height: fit-content;
 }
 
 .mycard {
@@ -63,7 +62,6 @@
   grid-row: span 1;
 }
 
-
 .mycard img {
   border: 1px solid rgba(54, 162, 235, 1);
   border-radius: 50%;
@@ -84,7 +82,7 @@
 }
 
 meter::-webkit-meter-bar {
-  background: rgb(57,133,197);
+  background: rgb(57, 133, 197);
   border: none;
 }
 
@@ -93,7 +91,7 @@ meter::-webkit-meter-optimum-value {
 }
 
 .infotext {
-  color: rgb(57,133,197);
+  color: rgb(57, 133, 197);
   font-weight: 600;
   text-align: justify;
 }
@@ -106,13 +104,11 @@ meter::-webkit-meter-optimum-value {
   min-width: 100%;
 }
 @media (min-width: 50rem) {
-  .container {
-        grid-template-columns: repeat(4, 1fr);
-  }
   .mycard {
     min-width: 100%;
     max-width: 100%;
     width: 100%;
-    height: 20em;
+    height: fit-content;
+    min-height: 25rem;
   }
 }
