--- a/src/about.module.css
+++ b/src/about.module.css
@@ -39,7 +39,8 @@ a {
 }
 .flextbtn {
   display: flex;
-  margin: auto;
+  top: 0;
+  margin: 0 atuo auto auto;
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
@@ -55,7 +56,7 @@ a {
   border: 1px solid rgba(54, 162, 235, 1);
   border-radius: 0.5rem;
   background: rgba(54, 162, 235, 0.2);
-  color: rgb(32,49,100);
+  color: rgb(32, 49, 100);
   padding: 0.25rem 1rem;
   cursor: pointer;
   transition: color 250ms ease-in, background 250ms ease-in;
