--- a/src/Chart/Chart.module.css
+++ b/src/Chart/Chart.module.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+.App {
+  font-family: sans-serif;
+  text-align: center;
+}
+
 a:link {
   text-decoration: none;
   color: rgb(183, 225, 253);
