--- a/src/Components/UI/Card.module.css
+++ b/src/Components/UI/Card.module.css
@@ -2,7 +2,7 @@
   border: 1px solid rgba(54, 162, 235, 1);
   background: rgba(54, 162, 235, 0.2);
   color: rgb(50, 4, 255);
- 
+
   /* cursor: pointer; */
   border-radius: 5px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
@@ -45,6 +45,7 @@
   text-align: center;
   background: rgba(54, 162, 235, 1);
   padding: 0.3rem 0 0 0;
+  overflow-x: hidden;
 }
 .insidecontent {
 }
@@ -90,7 +91,6 @@
   height: 20rem;
   max-height: 20rem;
   min-height: 20rem;
-
 }
 
 .chartdisplay {
@@ -103,7 +103,6 @@
   overflow: scroll;
 }
 @media (min-width: 50rem) {
-
   .HeroPlace {
     grid-auto-flow: column;
     align-content: center;
@@ -113,6 +112,7 @@
     overflow: visible;
     display: block;
     z-index: 999;
+    margin-left: 0;
   }
 
   .infodisplay {
@@ -149,5 +149,10 @@
     margin: auto;
     max-width: 100%;
     line-height: 1.2;
+  }
+  .chartdisplay {
+    font-size: 10px;
+    padding-left: 0px;
+    margin-left: -30px;
   }
 }
