--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,8 @@ html {
 
 body {
   margin: 0;
-  background-image: url(./Images/pattern-randomized.svg);
+  background-image: url(./Images/galaxy.webp);
+  /* background-image: url(./Images/pattern-randomized.svg); */
 }
 
 a{
