Update Twitte Splitter and some css also navbar

--- a/src/Components/UI/Card.module.css
+++ b/src/Components/UI/Card.module.css
@@ -58,7 +58,7 @@
 
 .topchart {
   background-color: rgb(0, 0, 5);
-  background-image: url("../../Images/wwwvecteezycom.jpg");
+  background-image: url("../../Images/wwwvecteezycom.webp");
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover;
