--- a/src/Components/UI/Navbar.css
+++ b/src/Components/UI/Navbar.css
@@ -19,7 +19,7 @@ header {
   border-bottom: #f2f2f2 4px solid;
 }
 
-.nav-toggle {
+/* .nav-toggle {
   display: none;
 }
 .nav-toggle-label {
@@ -55,7 +55,7 @@ header {
 
 .nav-toggle-label span::after {
   top: 7px;
-}
+} */
 
 .mainnavbar {
   position: absolute;
