--- a/src/Components/UI/Card.module.css
+++ b/src/Components/UI/Card.module.css
@@ -128,6 +128,15 @@
   transform: translate(-50%, -50%);
 }
 
+.area {
+  height: 400px;
+  border: 1px solid black;
+  text-align: left;
+  padding: 5px;
+  overflow: scroll;
+}
+
+
 @media screen and (max-width: 50rem) {
   .clipboardinside {
     /* height: 10rem; */
