fix first page background scrollong

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -23,3 +23,11 @@ a {
   color: rgba(255, 255, 255, 0.55);
   text-decoration: none;
 }
+
+.body::-webkit-scrollbar {
+    display: none;
+}
+.body{
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
