--- a/src/Components/UI/ErrorModal.module.css
+++ b/src/Components/UI/ErrorModal.module.css
@@ -37,7 +37,7 @@
   justify-content: flex-end;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 50rem) {
   .modal {
     left: calc(50% - 20rem);
     width: 40rem;
