--- a/src/Components/UI/Card.module.css
+++ b/src/Components/UI/Card.module.css
@@ -136,6 +136,12 @@
   overflow: scroll;
 }
 
+.regixText {
+  width: fit-content;
+  width: 60%;
+  text-align: justify;
+  text-justify: inter-word;
+}
 
 @media screen and (max-width: 50rem) {
   .clipboardinside {
@@ -161,5 +167,8 @@
     font-size: 10px;
     padding-left: 0px;
     margin-left: -30px;
+  }
+  .regixText {
+    width: fit-content;
   }
 }
