--- a/src/Components/SubPages/progressbar.css
+++ b/src/Components/SubPages/progressbar.css
@@ -67,7 +67,7 @@
   text-align: left;
   height: 4rem;
   font-variant-numeric: tabular-nums;
-  font-size: .8rem;
+  font-size: 0.8rem;
 }
 .emptycontainer > ul,
 li {
@@ -76,26 +76,33 @@ li {
   margin: auto;
 }
 
+.infoWhatif {
+  display: grid;
+  gap: 5px;
+  justify-items: center;
+  align-items: center;
+  width: min(100%);
+}
 .infoandpichrt {
   display: grid;
   gap: 5px;
   justify-items: center;
   align-items: center;
-  width:min(100%)
+  width: min(100%);
 }
 .infoandpichrt :last-child {
   border: 4px rgb(22, 160, 252) solid;
   background-color: aqua;
   width: 20vh;
-  height:20vh;
+  height: 20vh;
   min-width: 5rem;
   min-height: 5rem;
   max-width: 350px;
   max-height: 350px;
   border-radius: 50%;
-  border: 4px rgba(54, 162, 235, 1) solid;       
+  border: 4px rgba(54, 162, 235, 1) solid;
 }
-
+section { width: 80%;}
 
 @media (min-width: 50rem) {
   .emptybigcontainer {
@@ -121,15 +128,14 @@ li {
     font-variant-numeric: tabular-nums;
   }
   .infoandpichrt {
-     grid-template-columns: repeat(3fr 1fr);
-
-    }
+    grid-template-columns: repeat(1,3fr 1fr);
+  }
   .infoandpichrt :last-child {
     border: 4px rgb(22, 160, 252) solid;
     background-color: aqua;
     grid-column-start: 2;
     grid-row-start: 1;
-    grid-row-end:4 ;
+    grid-row-end: 4;
     width: calc(40vh);
     height: calc(40vh);
     min-width: 250px;
@@ -137,6 +143,10 @@ li {
     max-width: 350px;
     max-height: 350px;
     border-radius: 50%;
-    border: 4px rgba(54, 162, 235, 1) solid;       
+    border: 4px rgba(54, 162, 235, 1) solid;
+  }
+  .infoWhatif {
+    grid-template-columns:repeat(1,1fr 3fr);
   }
 }
+
