--- a/src/Components/SubPages/UsersList.module.css
+++ b/src/Components/SubPages/UsersList.module.css
@@ -306,9 +306,10 @@ iframe {
 }
 
 .title {
-  font-size: 4rem;
+  font-size: 1.8rem;
   color: white;
   text-shadow: 0 0 5px black;
+  padding:.5rem;
 }
 
 .section {
@@ -369,8 +370,9 @@ iframe {
   }
 
   .title {
-    font-size: 7rem;
+    font-size: 2rem;
     color: white;
     text-shadow: 0 0 5px black;
+
   }
 }
